Fix some NREs and tweak translation

--- a/ThirdPersonCamera/translations/english.json
+++ b/ThirdPersonCamera/translations/english.json
@@ -9,6 +9,6 @@
     "Default camera zoom (ship)": "Default camera zoom (ship)",
     "Debug logs": "Debug logs",
 
-    "THIRD_PERSON_CAMERA_TOGGLE": "Toggle Third Person <CMD>"
+    "THIRD_PERSON_CAMERA_TOGGLE": "Toggle 3rd person <CMD>"
   }
 }
